@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ ~Copyright (c) 2005-2010, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ ~
+ ~WSO2 Inc. licenses this file to you under the Apache License,
+ ~Version 2.0 (the "License"); you may not use this file except
+ ~in compliance with the License.
+ ~You may obtain a copy of the License at
+ ~
+ ~http://www.apache.org/licenses/LICENSE-2.0
+ ~
+ ~Unless required by applicable law or agreed to in writing,
+ ~software distributed under the License is distributed on an
+ ~"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ ~KIND, either express or implied.  See the License for the
+ ~specific language governing permissions and limitations
+ ~under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -6,14 +23,14 @@
     <parent>
         <groupId>org.wso2.carbon.automation</groupId>
         <artifactId>test-automation-framework</artifactId>
-        <version>4.3.1-SNAPSHOT</version>
+        <version>4.3.2-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.carbon.automation.engine</artifactId>
-    <version>4.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>WSO2 Carbon Automation - Test Framework Engine</name>
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
@@ -38,28 +55,6 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <!--   <execution>
-                           <id>default-check</id>
-                           <goals>
-                               <goal>check</goal>
-                           </goals>
-                           <configuration>
-                               <rules>
-                                   &lt;!&ndash; implmentation is needed only for Maven 2 &ndash;&gt;
-                                   <rule implementation="org.jacoco.maven.RuleConfiguration">
-                                       <element>BUNDLE</element>
-                                       <limits>
-                                           &lt;!&ndash; implmentation is needed only for Maven 2 &ndash;&gt;
-                                           <limit implementation="org.jacoco.report.check.Limit">
-                                               <counter>COMPLEXITY</counter>
-                                               <value>COVEREDRATIO</value>
-                                               <minimum>0.60</minimum>
-                                           </limit>
-                                       </limits>
-                                   </rule>
-                               </rules>
-                           </configuration>
-                       </execution>-->
                 </executions>
             </plugin>
             <plugin>
@@ -78,7 +73,9 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/0.7.1.201405082137/org.jacoco.agent-0.7.1.201405082137-runtime.jar=destfile=${project.build.directory}/jacoco.exec
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
@@ -124,10 +121,6 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.axis2.wso2</groupId>
-            <artifactId>axis2</artifactId>
         </dependency>
     </dependencies>
 </project>
